centralizar o botão de enviar

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         </label>
       </fieldset>
 
-      <div>
+        <div>
         <button class="botao" onclick="finalizarPedido()">
-          Finalizar Pedido
+          Enviar Pedido
         </button>
       </div>
     </form>
