--- a/taglink/cardapio.html
+++ b/taglink/cardapio.html
@@ -54,7 +54,7 @@
       </div>
     </main>
     <footer>
-      <p>Site criado por <a href="https://www.google.com/search?client=opera&q=nhem&sourceid=opera&ie=UTF-8&oe=UTF-8" target="_blank">Nhem</a> para a <a href="+55(24)99838-6746">Casa da Pizza Scotini</a></p>
+      <p>Site criado por <a href="https://www.google.com/search?client=opera&q=nhem&sourceid=opera&ie=UTF-8&oe=UTF-8" target="_blank">Nhem</a> para a <a href="+55(24)99838-6746">Casa da Pizza Scotini.</a></p>
     </footer>
   </body>
 </html>
