--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
         <div id="div1" class="hide">
           <span>Troco?</span>
-          <input type="radio" name="one" class="inline" id="troco" />
+          <input type="radio" name="one" id="troco" class="inline" />
           Sim &nbsp;
-          <input type="radio" name="one" class="inline" id="din-certo" />
+          <input type="radio" name="one" id="din-certo" class="inline" />
           Não
         </div>
         </div>
