update do icone do site da pizzaria

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Casa da Pizza Scotini - Pedido</title>
-    <link rel="shortcut icon" href="img/logo-pizzaria-scotini.ico">
+    <link rel="shortcut icon" href="img/logo-pizzaria-scotini.png">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -29,7 +29,7 @@
             id="first-name"
             name="first-name"
             type="text"
-            placeholder="Nhem"
+            placeholder="Nhem Nhem Nhem"
         /></label>
         <label for="address"
           >Seu endereço:
