--- a/index.html
+++ b/index.html
@@ -73,14 +73,16 @@
 
         <div id="div1" class="hide">
           <span>Troco?</span>
+        
           <input type="radio" name="one" id="troco" class="inline" onclick="show3()" />
           Sim &nbsp;
+          
           <input type="radio" name="one" id="din-certo" class="inline" />
           Não
         </div>
 
         <div id="div2" class="hide2">
-          <span>Para quanto?</span>
+          <span><label for="quanto">Para quanto?</label></span>
           <input type="text" id="quanto" class="inline" />
 
         </div>
