--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             id="first-name"
             name="first-name"
             type="text"
-            placeholder="Nhem Nhem Nhem"
+            placeholder="João das Neves"
         /></label>
         <label for="address"
           >Seu endereço:
@@ -37,7 +37,7 @@
             id="address"
             name="address"
             type="text"
-            placeholder="Avenida Bernardo Vieira de Melo, Nº 5171"
+            placeholder="Rua Exemplo, Nº 00"
         /></label>
         <label for="card" class="inline">
           Método de pagamento: <br /><br />
