--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </form>
     </main>
     <footer>
-      <p>Site criado por <a href="https://www.google.com/search?client=opera&q=nhem&sourceid=opera&ie=UTF-8&oe=UTF-8" target="_blank">Nhem</a> para a <a href="https://www.instagram.com/casadapizzascotini/?theme=dark" target="_blank">Casa da Pizza Scotini</a></p>
+      <p>Site criado por <a href="https://github.com/jalotodelima/" target="_blank">Igor</a> para a <a href="https://www.instagram.com/casadapizzascotini/?theme=dark" target="_blank">Casa da Pizza Scotini</a></p>
     </footer>
   </body>
   <script>
